Footer: fixed an issue where footer is floating above form section
~ it looks like the centered form is not centered at all as the footer is floating in both desktop and mobile
~ the parent div is already in flex with the form section streching, having fix heights are unnecessary

--- a/src/App.css
+++ b/src/App.css
@@ -30,13 +30,9 @@ body {
 }
 
 .form-section {
-  height: 77.8vh;
   overflow-x: hidden;
   overflow-y: hidden;
-
   flex: 1;
-  min-height: 77.8vh;
-
   display: grid;
   place-content: center;
   transition: 0.5s color ease-in-out;
